[tool.poetry]
name = "atoolbox"
version = "0.0.1"
description = "Useful functions for spark"
authors = ["A. Alanis <ze13ju@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/j-mechacorta/atoolbox"
keywords = ["pyspark"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: python Modules"
]
include= ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

