[tool.poetry]
name = "atoolbox"
version = "0.0.1"
description = "Useful functions for spark"
authors = ["A. Alanis <ze13ju@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/j-mechacorta/atoolbox"
keywords = ["pyspark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include= ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

