[tool.poetry]
name = "atoolbox"
version = "0.0.4"
description = "Useful spark functions to join multiple dataframes, sum all numeric fields in a row and export dataframe to json file and NOT json records"
authors = ["A. Alanis <ze13ju@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/j-mechacorta/atoolbox"
keywords = ["pyspark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include= ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.6"
pyspark = "^3.0.0"
PyFunctional = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

